--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,8 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/DetroitSkyline.jpg') no-repeat center ;
+  background: url('images/DetroitNight.jpg') center;
+  background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
