--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,10 @@ a.social:hover {
   clear: both;
 }
 
+img.dj {
+  width: 100%;
+}
+
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
   
