--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,10 @@ img.dj {
   width: 100%;
 }
 
+iframe.resume {
+  width: 100%;
+  }
+
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
   
