--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/DetroitNight.jpg') center;
+  background: url('images/DetroitNight-min.jpg') center;
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
