--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ a:hover {
   padding: 10px;
   position: fixed;
   text-align: center;
+  z-index: 2;
 }
 .nav {
   display: flex;
@@ -188,11 +189,13 @@ iframe.resume {
       display: flex;
       flex-flow: row;
       max-width: 1200px;
+      justify-content: center;
       margin: auto;
   }
 
   .card {
-    flex: 33%;
+    flex: 1;
+    max-width: 60%;
   }
 
   header {
