--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 /* Global Layout Set-up */
-* { 
+* {
   box-sizing: border-box;
 }
-  
+
 body {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #222;
   background: #f7f5f0;
 }
@@ -42,23 +42,23 @@ a:hover {
 }
 
 .nav .name {
-    display: block;
-    margin-right: auto;
-    color: white;
+  display: block;
+  margin-right: auto;
+  color: white;
 }
 .nav li {
   padding: 5px 10px 10px 10px;
 }
 .nav a {
-  transition: all .5s;
+  transition: all 0.5s;
 }
 .nav a:hover {
-  color: white
+  color: white;
 }
 
 header {
   text-align: center;
-  background: url('../images/DetroitNight-min.jpg') center;
+  background: url("../images/DetroitNight-min.jpg") center;
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
@@ -73,7 +73,7 @@ header .profile-image {
   height: 150px;
   border-radius: 50%;
   border: 3px solid white;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 header .profile-image:hover {
   transform: scale(1.5) rotate(10deg);
@@ -85,7 +85,7 @@ header .profile-image:hover {
   border-radius: 5px;
   display: table;
   margin: 10px auto;
-} 
+}
 .location {
   background-color: #222;
   color: yellow;
@@ -97,7 +97,7 @@ header .profile-image:hover {
   background: #fff;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 #resume {
   width: 500px;
@@ -135,7 +135,7 @@ footer {
 
 footer .copyright {
   top: -8px;
-  font-size: .75em;
+  font-size: 0.75em;
 }
 
 footer ul {
@@ -155,8 +155,8 @@ a.social {
   width: 30px;
   height: 30px;
   background-size: 30px 30px;
-  opacity: .4;
-  transition: all .5s;
+  opacity: 0.4;
+  transition: all 0.5s;
 }
 a.twitter {
   background-image: url(../images/twitter.svg);
@@ -180,17 +180,16 @@ img.dj {
 
 iframe.resume {
   width: 100%;
-  }
+}
 
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
-  
   .flex {
-      display: flex;
-      flex-flow: row;
-      max-width: 1200px;
-      justify-content: center;
-      margin: auto;
+    display: flex;
+    flex-flow: row;
+    max-width: 1200px;
+    justify-content: center;
+    margin: auto;
   }
 
   .card {
@@ -207,7 +206,6 @@ iframe.resume {
     padding: 0 30px;
   }
 
-
   main {
     padding-top: 20px;
   }
@@ -221,6 +219,4 @@ iframe.resume {
     max-width: 1200px;
     margin: 40px auto;
   }
-
 }
-
